--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures{
+        dataBinding = true
+        viewBinding = true
+    }
 
     androidExtensions {
         experimental = true
